crates/pixi_spec/src/snapshots/pixi_spec__toml__test__when_reject_string_with_channel_prefix_toml.snap
---
source: crates/pixi_spec/src/toml.rs
expression: parse_toml_error(input)
---
  × `when` strings only support package names with optional version constraints; use the expanded form for additional matchspec fields
   ╭─[pixi.toml:2:9]
 1 │ version = "*"
 2 │ when = "conda-forge::python"
   ·         ───────────────────
   ╰────
