crates/pixi_spec/src/snapshots/pixi_spec__toml__test__when_reject_table_without_directive_toml.snap
---
source: crates/pixi_spec/src/toml.rs
expression: parse_toml_error(input)
---
  × `when` tables must contain exactly one of `all`, `any`, or `package`
   ╭─[pixi.toml:2:8]
 1 │ version = "*"
 2 │ when = { build = "*cuda" }
   ·        ───────────────────
   ╰────
