crates/pixi_spec/src/snapshots/pixi_spec__toml__test__when_reject_top_level_array_json.snap
---
source: crates/pixi_spec/src/toml.rs
expression: parse_json_error(input)
---
data did not match any variant of untagged enum TomlWhen
