crates/pixi_spec/src/snapshots/pixi_spec__toml__test__when_reject_top_level_array_toml.snap
---
source: crates/pixi_spec/src/toml.rs
expression: parse_toml_error(input)
---
  × `when` must be a string or a table with `all`, `any`, or `package`; top-level arrays are not allowed
   ╭─[pixi.toml:2:8]
 1 │ version = "*"
 2 │ when = ["__unix"]
   ·        ──────────
   ╰────
